<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/container_wide_padding"
    tools:context="iteso.com.rentstudio.Activity_Register_User">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/activity_register_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin">
            <ImageView
                android:id="@+id/activity_register_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:scaleType="centerInside"
                android:src="@drawable/generic_user"
                android:layout_margin="@dimen/margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/trueBlack"
                android:textSize="@dimen/large_textSize"
                android:layout_margin="@dimen/margin"/>
        </LinearLayout>

        <EditText
            android:id="@+id/activity_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_margin="@dimen/margin"/>

        <EditText
            android:id="@+id/activity_register_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:layout_margin="@dimen/margin"/>

        <EditText
            android:id="@+id/activity_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="@dimen/margin"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/activity_register_cellphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:layout_margin="@dimen/margin"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/activity_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="@dimen/margin"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/activity_login_loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/notReallyWhite"
        android:textSize="@dimen/large_button_textSize"
        android:background="@drawable/purple_button"
        android:paddingHorizontal="@dimen/node_padding"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
