<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/container_wide_padding"
    tools:context="iteso.com.rentstudio.Activity_Register_Property">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin">
            <ImageView
                android:id="@+id/activity_registerProperty_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:scaleType="centerInside"
                android:src="@drawable/generic_property"
                android:layout_margin="@dimen/margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/register_property"
                android:textStyle="bold"
                android:textColor="@color/trueBlack"
                android:textSize="@dimen/large_textSize"
                android:layout_margin="@dimen/margin"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin">

            <EditText
                android:id="@+id/activity_registerProperty_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name1"
                android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin">

            <EditText
                android:id="@+id/activity_registerProperty_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direction"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin">

            <EditText
                android:id="@+id/activity_registerProperty_town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/town"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin">

            <EditText
                android:id="@+id/activity_registerProperty_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin">

            <EditText
                android:id="@+id/activity_registerProperty_rent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rent"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/activity_bregister_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/notReallyWhite"
        android:textSize="@dimen/large_button_textSize"
        android:background="@drawable/button_ripple_effect"
        android:paddingHorizontal="@dimen/node_padding"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
</ScrollView>
